--- a/Restaurant/Nd/templates/Nd/AdCatering.html
+++ b/Restaurant/Nd/templates/Nd/AdCatering.html
@@ -15,8 +15,8 @@
 
 {% block content %}
     {% include 'AdNavbar.html' %}
-    <div class="container-fluid d-flex flex-column pt-5" id="AdCatering">
-        <div class="container d-flex justify-content-center pb-sm-5" id="ACH">
+    <div class="container-fluid d-flex flex-column px-0" id="AdCatering">
+        <div class="container-fluid d-flex justify-content-center pb-sm-5" id="ACH">
           <h1>NamasteDaju Restaurant Catering</h1>
         </div>      
         <h1 class="text-center" id="Uch1">Uncompleted</h1>
