--- a/Restaurant/Nd/templates/Nd/AdGallery.html
+++ b/Restaurant/Nd/templates/Nd/AdGallery.html
@@ -15,8 +15,8 @@
 
 {% block content %}
     {% include 'AdNavbar.html' %}
-    <div class="container-fluid d-flex flex-column pt-5" id="AdGallery">
-        <div class="container d-flex justify-content-center pb-sm-5" id="AGH">
+    <div class="container-fluid d-flex flex-column px-0" id="AdGallery">
+        <div class="container-fluid d-flex justify-content-center pb-sm-5" id="AGH">
           <h1>NamasteDaju Restaurant Gallery</h1>
         </div>   
         <div class="container d-flex justify-content-end pb-4">
