--- a/Restaurant/Nd/templates/Nd/AdMenu.html
+++ b/Restaurant/Nd/templates/Nd/AdMenu.html
@@ -15,8 +15,8 @@
 
 {% block content %}
     {% include 'AdNavbar.html' %}
-    <div class="container-fluid d-flex flex-column pt-5" id="AdMenu">
-        <div class="container d-flex justify-content-center pb-sm-5" id="AMH">
+    <div class="container-fluid d-flex flex-column px-0" id="AdMenu">
+        <div class="container-fluid d-flex justify-content-center pb-sm-5" id="AMH">
           <h1>NamasteDaju Restaurant Menu</h1>
         </div>   
         <div class="container d-flex justify-content-end pb-4">
