--- a/Restaurant/static/css/AdCatering.css
+++ b/Restaurant/static/css/AdCatering.css
@@ -1,7 +1,16 @@
 /*====================AdCatering====================*/
-
+#ACH
+{
+    height: 400px;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ) ,url("../images/admin/b.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 #ACH h1
 {
+    margin-top: 200px;
+    font-size: 40px;
     color: rgb(0, 187, 40);
     font-family: 'Times New Roman', Times, serif;
 }
