--- a/Restaurant/Nd/templates/Nd/AdStories.html
+++ b/Restaurant/Nd/templates/Nd/AdStories.html
@@ -15,8 +15,8 @@
 
 {% block content %}
     {% include 'AdNavbar.html' %}
-    <div class="container-fluid d-flex flex-column pt-5" id="AdStories">
-        <div class="container d-flex justify-content-center pb-sm-5" id="ASH">
+    <div class="container-fluid d-flex flex-column px-0" id="AdStories">
+        <div class="container-fluid d-flex justify-content-center pb-sm-5" id="ASH">
           <h1>NamasteDaju Restaurant Stories</h1>
         </div>   
         <div class="container d-flex justify-content-end pb-4">
