--- a/Restaurant/static/css/AdMenu.css
+++ b/Restaurant/static/css/AdMenu.css
@@ -8,8 +8,18 @@
     right: 10px;
     z-index: 1000;
 }
+#AMH
+{
+    height: 400px;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ) ,url("../images/admin/b.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 #AMH h1
 {
+    margin-top: 200px;
+    font-size: 40px;
     color: rgb(0, 187, 40);
     font-family: 'Times New Roman', Times, serif;
 }
