--- a/Restaurant/static/css/AdNavbar.css
+++ b/Restaurant/static/css/AdNavbar.css
@@ -17,12 +17,12 @@
 /*====================Header====================*/
 #Header
 {
+    font-size: 50px;
     border-radius: 40%;
     background-color: red;
     box-shadow: 0px 10px 20px rgb(187, 0, 0);
-}
-#Header span
-{
-    font-size: 50px;
+    position: fixed;
+    top:0;
+    z-index: 3000;
 }
 /*====================Header====================*/
