--- a/Restaurant/templates/AdNavbar.html
+++ b/Restaurant/templates/AdNavbar.html
@@ -1,5 +1,5 @@
 <span class="fa fa-angle-double-up" id="TopScroll" onclick="ScrollUp()"></span>
 
-<div class="container d-flex justify-content-center">
-    <a href="/Nd/admin" class="btn btn-danger" id="Header"><span class="fa fa-home p-2"></span></a>
+<div class="container-fluid d-flex justify-content-center">
+    <a href="/Nd/admin" class="btn btn-danger text-center" id="Header"><span class="fa fa-home p-2"></span></a>
 </div>
