--- a/Restaurant/Nd/templates/Nd/AdCatering.html
+++ b/Restaurant/Nd/templates/Nd/AdCatering.html
@@ -24,7 +24,8 @@
             <table class="table table-striped" id="Images">
                 <thead class="thead-dark">
                     <tr>
-                        <th>Name</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
                         <th>Email</th>
                         <th>Phone</th>
                         <th>Date</th>
@@ -40,7 +41,8 @@
                     {% for i in key %}
                     {% if i.completion == False %}
                     <tr  class="table-warning">                        
-                        <td>{{i.name}}</td>
+                        <td>{{i.firstname}}</td>
+                        <td>{{i.lastname}}</td>
                         <td>{{i.email}}</td>
                         <td>{{i.phone}}</td>
                         <td>{{i.date}}</td>
@@ -63,7 +65,8 @@
             <table class="table table-striped" id="Images">
                 <thead class="thead-dark">
                     <tr>
-                        <th>Name</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
                         <th>Email</th>
                         <th>Phone</th>
                         <th>Date</th>
@@ -79,7 +82,8 @@
                     {% for i in key %}
                     {% if i.completion == True %}
                     <tr class="table-success">
-                        <td>{{i.name}}</td>
+                        <td>{{i.firstname}}</td>
+                        <td>{{i.lastname}}</td>
                         <td>{{i.email}}</td>
                         <td>{{i.phone}}</td>
                         <td>{{i.date}}</td>
