--- a/Restaurant/Nd/templates/Nd/AdReservation.html
+++ b/Restaurant/Nd/templates/Nd/AdReservation.html
@@ -24,7 +24,8 @@
             <table class="table table-striped" id="Images">
                 <thead class="thead-dark">
                     <tr>
-                        <th>Name</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
                         <th>Email</th>
                         <th>Phone</th>
                         <th>Date</th>
@@ -38,7 +39,8 @@
                     {% for i in key %}
                     {% if i.completion == False %}
                     <tr  class="table-warning">                        
-                        <td>{{i.name}}</td>
+                        <td>{{i.firstname}}</td>
+                        <td>{{i.lastname}}</td>
                         <td>{{i.email}}</td>
                         <td>{{i.phone}}</td>
                         <td>{{i.date}}</td>
@@ -59,7 +61,8 @@
             <table class="table table-striped" id="Images">
                 <thead class="thead-dark">
                     <tr>
-                        <th>Name</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
                         <th>Email</th>
                         <th>Phone</th>
                         <th>Date</th>
@@ -73,7 +76,8 @@
                     {% for i in key %}
                     {% if i.completion == True %}
                     <tr class="table-success">
-                        <td>{{i.name}}</td>
+                        <td>{{i.firstname}}</td>
+                        <td>{{i.lastname}}</td>
                         <td>{{i.email}}</td>
                         <td>{{i.phone}}</td>
                         <td>{{i.date}}</td>
