--- a/Restaurant/templates/Navbar.html
+++ b/Restaurant/templates/Navbar.html
@@ -56,7 +56,7 @@
                     <small class="form-text text-muted">Don't have an account!</small>
                 </div>
                 <div class="container d-flex justify-content-center">
-                    <a href="#" class="btn btn-style font-weight-bold" >SignUp</a>
+                    <a href="/Ac/register" class="btn btn-style font-weight-bold" >SignUp</a>
                 </div>
             </form>
         </div>
