--- a/Restaurant/static/css/Login.css
+++ b/Restaurant/static/css/Login.css
@@ -93,8 +93,8 @@
 }
 /*====================Front====================*/
 
-/*====================Register====================*/
-#RH h1
+/*====================Login====================*/
+#LH h1
 {
     color: rgb(0, 0, 187);
     font-family: 'Times New Roman', Times, serif;
@@ -143,4 +143,4 @@
 {
     color: red;
 }
-/*====================Register====================*/
+/*====================Login====================*/
