Moving admin to new admin app

--- a/Restaurant/Ad/templates/Ad/AdGallery.html
+++ b/Restaurant/Ad/templates/Ad/AdGallery.html
@@ -60,8 +60,8 @@
                             <td><img src="/{{i.image}}"/></td>
                             <td>{{i.uploaded_date}}</td>
                             <td>
-                                <a href="/Nd/updatepicture/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
-                                <a href="/Nd/deletepicture/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this picture?')">Delete</a>
+                                <a href="/Ad/updatepicture/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
+                                <a href="/Ad/deletepicture/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this picture?')">Delete</a>
                             </td>
                         </tr>
                         {% endfor %}
