--- a/Restaurant/Ad/templates/Ad/AdMenu.html
+++ b/Restaurant/Ad/templates/Ad/AdMenu.html
@@ -66,8 +66,8 @@
                             <td><img src="/{{i.image}}"/></td>
                             <td>{{i.uploaded_date}}</td>
                             <td>
-                                <a href="/Nd/updatefood/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
-                                <a href="/Nd/deletefood/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this food?')">Delete</a>
+                                <a href="/Ad/updatefood/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
+                                <a href="/Ad/deletefood/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this food?')">Delete</a>
                             </td>
                         </tr>
                         {% endif %}
@@ -98,8 +98,8 @@
                             <td><img src="/{{i.image}}"/></td>
                             <td>{{i.uploaded_date}}</td>
                             <td>
-                                <a href="/Nd/updatefood/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
-                                <a href="/Nd/deletefood/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this food?')">Delete</a>
+                                <a href="/Ad/updatefood/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
+                                <a href="/Ad/deletefood/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this food?')">Delete</a>
                             </td>
                         </tr>
                         {% endif %}
@@ -130,8 +130,8 @@
                             <td><img src="/{{i.image}}"/></td>
                             <td>{{i.uploaded_date}}</td>
                             <td>
-                                <a href="/Nd/updatefood/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
-                                <a href="/Nd/deletefood/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this food?')">Delete</a>
+                                <a href="/Ad/updatefood/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
+                                <a href="/Ad/deletefood/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this food?')">Delete</a>
                             </td>
                         </tr>
                         {% endif %}
@@ -162,8 +162,8 @@
                             <td><img src="/{{i.image}}"/></td>
                             <td>{{i.uploaded_date}}</td>
                             <td>
-                                <a href="/Nd/updatefood/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
-                                <a href="/Nd/deletefood/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this food?')">Delete</a>
+                                <a href="/Ad/updatefood/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
+                                <a href="/Ad/deletefood/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this food?')">Delete</a>
                             </td>
                         </tr>
                         {% endif %}
@@ -194,8 +194,8 @@
                             <td><img src="/{{i.image}}"/></td>
                             <td>{{i.uploaded_date}}</td>
                             <td>
-                                <a href="/Nd/updatefood/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
-                                <a href="/Nd/deletefood/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this food?')">Delete</a>
+                                <a href="/Ad/updatefood/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
+                                <a href="/Ad/deletefood/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this food?')">Delete</a>
                             </td>
                         </tr>
                         {% endif %}
@@ -226,8 +226,8 @@
                             <td><img src="/{{i.image}}"/></td>
                             <td>{{i.uploaded_date}}</td>
                             <td>
-                                <a href="/Nd/updatefood/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
-                                <a href="/Nd/deletefood/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this food?')">Delete</a>
+                                <a href="/Ad/updatefood/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
+                                <a href="/Ad/deletefood/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this food?')">Delete</a>
                             </td>
                         </tr>
                         {% endif %}
