--- a/Restaurant/Ad/templates/Ad/AdStories.html
+++ b/Restaurant/Ad/templates/Ad/AdStories.html
@@ -62,8 +62,8 @@
                             <td>{{i.uploaded_date}}</td>
                             <td class="tdd">{{i.detail}}</td>
                             <td>
-                                <a href="/Nd/updatestory/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
-                                <a href="/Nd/deletestory/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this story?')">Delete</a>
+                                <a href="/Ad/updatestory/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
+                                <a href="/Ad/deletestory/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this story?')">Delete</a>
                             </td>
                         </tr>
                         {% endfor %}
