--- a/Restaurant/static/css/Login.css
+++ b/Restaurant/static/css/Login.css
@@ -109,12 +109,12 @@
     font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
 }
-#Card input, select
+#Card input
 {
     background-image: linear-gradient( rgb(0, 0, 255, 0.1), rgb(0, 0, 255, 0.1) );
     border-radius: 15px;
 }
-#Card input:hover, select:hover
+#Card input:hover
 {
     border: 2px solid rgb(0, 0, 187);
 }
