--- a/Restaurant/templates/Bottom.html
+++ b/Restaurant/templates/Bottom.html
@@ -19,13 +19,13 @@
     <div id="Useful Links">
         <h3 class="font-weight-bold heading">Useful Links</h3>
         <ul class="p-0">
-          <li><a href="/Nd/home">Home</a></li>
-          <li><a href="/Nd/menu">Menu</a></li>
-          <li><a href="/Nd/gallery">Gallery</a></li>
-          <li><a href="/Nd/stories">Stories</a></li>
-          <li><a href="/Nd/reservation">Reservation</a></li>
-          <li><a href="/Nd/catering">Catering</a></li>
-          <li><a href="/Nd/contact">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/menu">Menu</a></li>
+          <li><a href="/gallery">Gallery</a></li>
+          <li><a href="/stories">Stories</a></li>
+          <li><a href="/reservation">Reservation</a></li>
+          <li><a href="/catering">Catering</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </div>
     <div id="OpenHours">
