--- a/Restaurant/Ad/templates/Ad/AdCatering.html
+++ b/Restaurant/Ad/templates/Ad/AdCatering.html
@@ -16,7 +16,7 @@
 {% block content %}
     {% include 'AdNavbar.html' %}
     <div class="container-fluid d-flex flex-column px-0" id="AdCatering">
-        <div class="container-fluid d-flex justify-content-center pb-sm-5" id="ACH">
+        <div class="container-fluid d-flex justify-content-center mb-4" id="ACH">
           <h1>NamasteDaju Restaurant Catering</h1>
         </div>      
         <h1 class="text-center" id="Uch1">Uncompleted</h1>
