--- a/Restaurant/Nd/templates/Nd/Home.html
+++ b/Restaurant/Nd/templates/Nd/Home.html
@@ -23,25 +23,25 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item mx-sm-1">
-                                <a class="nav-link font-weight-bold {{home}} header_nav_link" href="/Nd/home">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link font-weight-bold {{home}} header_nav_link" href="/">Home <span class="sr-only">(current)</span></a>
                               </li>
                               <li class="nav-item mx-sm-1">
-                                <a class="nav-link font-weight-bold {{menu}} header_nav_link" href="/Nd/menu">Menu</a>
+                                <a class="nav-link font-weight-bold {{menu}} header_nav_link" href="/menu">Menu</a>
                               </li>
                               <li class="nav-item mx-sm-1">
-                                  <a class="nav-link font-weight-bold {{gallery}} header_nav_link" href="/Nd/gallery">Gallery</a>
+                                  <a class="nav-link font-weight-bold {{gallery}} header_nav_link" href="/gallery">Gallery</a>
                                 </li>
                               <li class="nav-item mx-sm-1">
-                                <a class="nav-link font-weight-bold {{stories}} header_nav_link" href="/Nd/stories">Stories</a>
+                                <a class="nav-link font-weight-bold {{stories}} header_nav_link" href="/stories">Stories</a>
                               </li>
                               <li class="nav-item mx-sm-1">
-                                <a class="nav-link font-weight-bold {{reservation}} header_nav_link" href="/Nd/reservation">Reservation</a>
+                                <a class="nav-link font-weight-bold {{reservation}} header_nav_link" href="/reservation">Reservation</a>
                               </li>
                               <li class="nav-item mx-sm-1">
-                                  <a class="nav-link font-weight-bold {{catering}} header_nav_link" href="/Nd/catering">Catering</a>
+                                  <a class="nav-link font-weight-bold {{catering}} header_nav_link" href="/catering">Catering</a>
                               </li>
                               <li class="nav-item mx-sm-1">
-                                <a class="nav-link font-weight-bold {{contact}} header_nav_link" href="/Nd/contact">Contact</a>
+                                <a class="nav-link font-weight-bold {{contact}} header_nav_link" href="/contact">Contact</a>
                               </li>
                           </ul>
                     </div>
@@ -66,7 +66,7 @@
                 <h4>---------------------------------- For You ----------------------------------</h4>
             </div>
             <div class="container d-flex justify-content-center">
-                <a href="/Nd/menu" class="btn btn-style font-weight-bold mt-sm-5 px-sm-5" >View Menu</a>
+                <a href="/menu" class="btn btn-style font-weight-bold mt-sm-5 px-sm-5" >View Menu</a>
             </div>
           </div>
           <div class="carousel-item" id="second">
@@ -80,7 +80,7 @@
                 <h4>---------------------------------- 1990 ----------------------------------</h4>
             </div>
             <div class="container d-flex justify-content-center">
-                <a href="/Nd/menu" class="btn btn-style font-weight-bold mt-sm-5 px-sm-5" >View Menu</a>
+                <a href="/menu" class="btn btn-style font-weight-bold mt-sm-5 px-sm-5" >View Menu</a>
             </div>
           </div>
           <div class="carousel-item" id="third">
@@ -94,7 +94,7 @@
                 <h4>---------------------------------- Of Your Food ----------------------------------</h4>
             </div>
             <div class="container d-flex justify-content-center">
-                <a href="/Nd/menu" class="btn btn-style font-weight-bold mt-sm-5 px-sm-5" >View Menu</a>
+                <a href="/menu" class="btn btn-style font-weight-bold mt-sm-5 px-sm-5" >View Menu</a>
             </div>
           </div>
           <div class="carousel-item" id="fourth">
@@ -108,7 +108,7 @@
                 <h4>---------------------------------- For Your Health ----------------------------------</h4>
             </div>
             <div class="container d-flex justify-content-center">
-                <a href="/Nd/menu" class="btn btn-style font-weight-bold mt-sm-5 px-sm-5" >View Menu</a>
+                <a href="/menu" class="btn btn-style font-weight-bold mt-sm-5 px-sm-5" >View Menu</a>
             </div>
           </div>
         </div>
@@ -129,7 +129,7 @@
             with our team, guests and shareholders is our opportunity to create an experience that FEEDs – Far Exceeds Expectations Daily – and
             show how much we care.”
           </p>
-          <a href="/Nd/stories" class="btn font-weight-bold px-5 py-2">View Our Stories</a>
+          <a href="/stories" class="btn font-weight-bold px-5 py-2">View Our Stories</a>
         </div>
     </div>
 
@@ -195,7 +195,7 @@
             </div>
         </div>
         <div class="container d-sm-flex justify-content-center">
-            <a href="/Nd/reservation" class="btn font-weight-bold px-5 py-2" id="row1_btn">Make a Reservation</a>
+            <a href="/reservation" class="btn font-weight-bold px-5 py-2" id="row1_btn">Make a Reservation</a>
         </div>
     </div>
 
