--- a/Restaurant/Nd/templates/Nd/Stories.html
+++ b/Restaurant/Nd/templates/Nd/Stories.html
@@ -23,25 +23,25 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item mx-sm-1">
-                                <a class="nav-link font-weight-bold {{home}} header_nav_link" href="/Nd/home">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link font-weight-bold {{home}} header_nav_link" href="/">Home <span class="sr-only">(current)</span></a>
                               </li>
                               <li class="nav-item mx-sm-1">
-                                <a class="nav-link font-weight-bold {{menu}} header_nav_link" href="/Nd/menu">Menu</a>
+                                <a class="nav-link font-weight-bold {{menu}} header_nav_link" href="/menu">Menu</a>
                               </li>
                               <li class="nav-item mx-sm-1">
-                                  <a class="nav-link font-weight-bold {{gallery}} header_nav_link" href="/Nd/gallery">Gallery</a>
+                                  <a class="nav-link font-weight-bold {{gallery}} header_nav_link" href="/gallery">Gallery</a>
                                 </li>
                               <li class="nav-item mx-sm-1">
-                                <a class="nav-link font-weight-bold {{stories}} header_nav_link" href="/Nd/stories">Stories</a>
+                                <a class="nav-link font-weight-bold {{stories}} header_nav_link" href="/stories">Stories</a>
                               </li>
                               <li class="nav-item mx-sm-1">
-                                <a class="nav-link font-weight-bold {{reservation}} header_nav_link" href="/Nd/reservation">Reservation</a>
+                                <a class="nav-link font-weight-bold {{reservation}} header_nav_link" href="/reservation">Reservation</a>
                               </li>
                               <li class="nav-item mx-sm-1">
-                                  <a class="nav-link font-weight-bold {{catering}} header_nav_link" href="/Nd/catering">Catering</a>
+                                  <a class="nav-link font-weight-bold {{catering}} header_nav_link" href="/catering">Catering</a>
                               </li>
                               <li class="nav-item mx-sm-1">
-                                <a class="nav-link font-weight-bold {{contact}} header_nav_link" href="/Nd/contact">Contact</a>
+                                <a class="nav-link font-weight-bold {{contact}} header_nav_link" href="/contact">Contact</a>
                               </li>
                           </ul>
                     </div>
@@ -53,7 +53,7 @@
                 <h1>Stories</h1>
             </div>
             <div class="container d-flex justify-content-center">
-                <h5><a href="/Nd/home">Home <span class="fa fa-chevron-right"></span> </a> Stories <span class="fa fa-chevron-right"></span></h5>
+                <h5><a href="/">Home <span class="fa fa-chevron-right"></span> </a> Stories <span class="fa fa-chevron-right"></span></h5>
             </div>
         </div>
     </div>
