--- a/Restaurant/static/css/Navbar.css
+++ b/Restaurant/static/css/Navbar.css
@@ -74,68 +74,59 @@
 .navbar-toggler-icon {
     background-image: url("../images/navbar/navbar_toggler_icon.png");
 }
-#Buttons .lb
+.profile
 {
-    color: white;
     height: 40px;
-    background-color: blue;
-    border-radius: 25px;
+    width: 40px;
+    border-radius: 100%;
 }
-#Buttons .lb:hover
+.user_name
 {
-    border: 3px solid rgb(0, 0, 187);
-    background-color: white;
-    color: rgb(0, 0, 187);
-}
-#Buttons form
-{
-    border-radius: 15px;
-    box-shadow: 0px 5px 20px blue;
-    position: fixed;
-    top: 65px;
-    right: 10px;
-    z-index: 2000;
-}
-#Buttons form span
-{
-    color: rgb(0, 0, 187);
     font-size: 20px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 2000;
+    color: rgb(0, 0, 187);
+    text-decoration: none;
 }
-#Buttons form input
+.user_name:hover
 {
+    color: rgb(0, 0, 187);
+    text-decoration: none;
+}
+.lgo
+{
+    color: white;
+    border-radius: 20px;
+    background-color:red;
+}
+.lgo:hover
+{
+    color: rgb(187, 0, 0);
+    background-color: transparent;
+    border: 2px solid rgb(187, 0, 0);
+}
+.lgi
+{
+    color: white;
+    border-radius: 20px;
+    background-color:blue;
+}
+.lgi:hover
+{
+    color: rgb(0, 0, 187);
+    background-color: transparent;
     border: 2px solid rgb(0, 0, 187);
-}
-#Buttons form button
-{
-    color: rgb(0, 0, 187);
-    border: 2px solid black;
-    border-radius: 10px;
-}
-#Buttons form button:hover
-{
-    color: white;
-    background-color: black;
-}
-#Buttons form a
-{
-    color: rgb(0, 0, 187);
-    border: 2px solid black;
-    border-radius: 10px;
-}
-#Buttons form a:hover
-{
-    color: white;
-    background-color: black;
 }
 /*====================Header====================*/
 
+@media screen and (max-width: 1250px)
+{
+.user_name
+{
+    display: none;
+}
+}
 @media screen and (max-width: 650px)
 {
-#Buttons .lb
+.lgi, .lgo
 {
     display: none;
 }
