--- a/Restaurant/templates/Navbar.html
+++ b/Restaurant/templates/Navbar.html
@@ -37,9 +37,11 @@
     </div>
     <div class="d-flex flex-row py-3 mr-sm-3" id="Buttons">
       {% if user.is_authenticated %}
-      <a href="/Ac/logout" class="btn btn-style font-weight-bold px-sm-3 lb">Logout</a>
+      <img class="img-fluid profile" src="{{request.user.profile.profile_pic.url}}"/>
+      <a class="font-weight-bold mx-3 user_name" href="/Ac/profile">{{request.user.profile.username}}</a>
+      <a class="btn font-weight-bold px-3 lgo" href="/Ac/logout">Logout</a>
       {% else %}
-      <a href="/Ac" class="btn btn-style font-weight-bold px-sm-3 lb">Login</a>
+      <a href="/Ac" class="btn font-weight-bold px-3 lgi">Login</a>
       {% endif %}
       <div id="Moon">
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-moon ml-3 mt-1" onclick="dark()" viewBox="0 0 16 16">
