--- a/Restaurant/static/css/PasswordChange.css
+++ b/Restaurant/static/css/PasswordChange.css
@@ -93,25 +93,11 @@
 }
 /*====================Front====================*/
 
-/*====================Profile====================*/
-#PH h1
+/*====================PasswordChange====================*/
+#PCH h1
 {
     color: rgb(0, 0, 187);
     font-family: 'Times New Roman', Times, serif;
-}
-#H h1
-{
-    color: black;
-    font-family: 'Times New Roman', Times, serif;
-}
-.profile_pic
-{
-    width: 400px;
-}
-#CCard
-{
-    border-radius: 15px;
-    box-shadow: 0px 5px 20px blue;
 }
 #Card
 {
@@ -132,14 +118,14 @@
 {
     border: 2px solid rgb(0, 0, 187);
 }
-#Card button, #Card a
+#Card button
 {
     color: white;
     font-weight: bold;
     background-color:blue;
     border-radius: 10px;
 }
-#Card button:hover, #Card a:hover
+#Card button:hover
 {
     color: rgb(0, 0, 187);
     background-color: transparent;
@@ -157,4 +143,4 @@
 {
     color: red;
 }
-/*====================Profile====================*/
+/*====================PasswordChange====================*/
