--- a/Restaurant/static/css/PasswordChangeDone.css
+++ b/Restaurant/static/css/PasswordChangeDone.css
@@ -93,68 +93,9 @@
 }
 /*====================Front====================*/
 
-/*====================Profile====================*/
-#PH h1
-{
-    color: rgb(0, 0, 187);
-    font-family: 'Times New Roman', Times, serif;
-}
-#H h1
-{
-    color: black;
-    font-family: 'Times New Roman', Times, serif;
-}
-.profile_pic
-{
-    width: 400px;
-}
-#CCard
-{
-    border-radius: 15px;
-    box-shadow: 0px 5px 20px blue;
-}
-#Card
-{
-    border-radius: 15px;
-    box-shadow: 0px 5px 20px blue;
-} 
-#Card label
-{
-    font-size: 20px;
-    font-family: 'Times New Roman', Times, serif;
-}
-#Card input
-{
-    background-image: linear-gradient( rgb(0, 0, 255, 0.1), rgb(0, 0, 255, 0.1) );
-    border-radius: 15px;
-}
-#Card input:hover
-{
-    border: 2px solid rgb(0, 0, 187);
-}
-#Card button, #Card a
-{
-    color: white;
-    font-weight: bold;
-    background-color:blue;
-    border-radius: 10px;
-}
-#Card button:hover, #Card a:hover
-{
-    color: rgb(0, 0, 187);
-    background-color: transparent;
-    border: 2px solid rgb(0, 0, 187);
-}
-#Card h4, .help-block
-{
-    font-family: cursive;
-}
-.help-block, .success_message
+/*====================Login====================*/
+#PasswordChangeDone h1
 {
     color: rgb(0, 187, 40);
+    font-family: 'Times New Roman', Times, serif;
 }
-.error_message, .help-block
-{
-    color: red;
-}
-/*====================Profile====================*/
