--- a/Restaurant/Ad/templates/Ad/User.html
+++ b/Restaurant/Ad/templates/Ad/User.html
@@ -39,20 +39,34 @@
             <table class="table table-striped" id="Images">
                 <thead class="thead-dark">
                     <tr>
+                        <th>Profile</th>
                         <th>Username</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
                         <th>Email</th>
+                        <th>Phone</th>
+                        <th>Gender</th>
+                        <th>Created Date</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for i in key %}
-                    <tr>                        
+                    {% if i.staff == False %}
+                    <tr>     
+                        <td><img class="img-fluid" src="{{i.profile_pic.url}}" /></td>                   
                         <td> {{ i.username }}</td>
+                        <td> {{ i.firstname }}</td>
+                        <td> {{ i.lastname }}</td>
                         <td> {{ i.email }}</td>
+                        <td> {{ i.phone }}</td>
+                        <td> {{ i.gender }}</td>
+                        <td>{{i.created_date}}</td>
                         <td>
                             <a href="/Ad/update_user/{{i.id}}" class="btn btn-warning" onclick="return confirm('Are you sure to make this user admin?')">Update to Admin</a>
                         <td>                    
                     </tr>
+                    {% endif %}
                     {% endfor %}
                 </tbody>
             </table>
