--- a/Restaurant/static/css/Navbar.css
+++ b/Restaurant/static/css/Navbar.css
@@ -124,9 +124,9 @@
     display: none;
 }
 }
-@media screen and (max-width: 650px)
+@media screen and (max-width: 750px)
 {
-.lgi, .lgo
+.lgi, .lgo, .profile
 {
     display: none;
 }
