--- a/Restaurant/static/css/Menu.css
+++ b/Restaurant/static/css/Menu.css
@@ -99,6 +99,29 @@
     color: rgb(0, 0, 187);
     font-family: 'Times New Roman', Times, serif;
 }
+#Cs
+{
+    color: rgb(0, 0, 187);
+    font-size: 20px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 1000;
+}
+#Form
+{
+    position: fixed;
+    top:150px;
+    z-index: 2000;
+}
+#Form h1
+{
+    color: green;
+}
+#Note
+{
+    color: orange;
+}
 #Card
 {
     border-radius: 15px;
